fixed header overflow

--- a/proto/css/3-col-portfolio.css
+++ b/proto/css/3-col-portfolio.css
@@ -216,60 +216,6 @@ a#menu-toggle{
 }
 
 
-/**
- *
- * Search bar
- */
-
-#search-container{
-    position: fixed;
-    left:0;
-    top: 50px;
-    left: 0px;
-    width: 100%;
-    padding-left:150px;
-    background-color:#b9b9b9;
-    opacity:0.85;
-}
-
-#search-bar{
-    padding:2px;
-    padding-right: 50px;
-    height:100%;
-    width:100%;
-    background-color:lightgray;
-    color: #696969;
-    font-style: italic;
-    font-size: 1.5em;
-    text-align: right;
-    border-width: 0px;
-}
-
-#search-bar:focus{
-    outline: none;
-
-}
-
-#search-close{
-    position:absolute;
-    top:0px;
-    right:0px;
-    height:34px;
-    width:34px;
-    background-color:red;
-    color:white;
-    font-size: 34px;
-    text-align: center;
-}
-
-#search-close:hover{
-    background-color: darkred;
-    color:lightgray;
-}
-
-#search-close:focus{
-    outline:none;
-}
 
 /*
  *  Article Page specific properties
