--- a/proto/css/main.css
+++ b/proto/css/main.css
@@ -10,6 +10,27 @@ body {
     margin: 0px;
 }
 
+
+ul.navbar-right{
+    position: absolute;
+    right: 0;
+    margin-right: 1vh;
+    border-style: none;
+    margin-top: -2px;
+}
+
+@media(max-width: 768px){
+    ul.navbar-right{
+        margin-top: -47px;
+        background-color: #222;
+        border-bottom-left-radius: 25px;
+        border-bottom-right-radius: 25px;
+        border-bottom-style: solid;
+        border-color:#222;
+        border-bottom-width: 1px;
+    }
+}
+
 .container{
     margin-top: 25px;
 }
@@ -221,7 +242,7 @@ a#menu-toggle{
     margin-top: 25px;
 }
 
-@media(min-width:768px) {
+@media(min-width:500px) {
     #wrapper {
         padding-left: 150px;
     }
@@ -250,61 +271,6 @@ a#menu-toggle{
     }
 }
 
-
-/**
- *
- * Search bar
- */
-
-#search-container{
-    position: fixed;
-    left:0;
-    top: 50px;
-    left: 0px;
-    width: 100%;
-    padding-left:150px;
-    background-color:#b9b9b9;
-    opacity:0.85;
-}
-
-#search-bar{
-    padding:5px;
-    padding-right: 50px;
-    height:100%;
-    width:100%;
-    background-color:lightgray;
-    color: #696969;
-    font-style: italic;
-    font-size: 1.5em;
-    text-align: right;
-    border-width: 0px;
-}
-
-#search-bar:focus{
-    outline: none;
-
-}
-
-#search-close{
-    position:absolute;
-    top:0px;
-    right:0px;
-    height:34px;
-    width:34px;
-    background-color:red;
-    color:white;
-    font-size: 34px;
-    text-align: center;
-}
-
-#search-close:hover{
-    background-color: darkred;
-    color:lightgray;
-}
-
-#search-close:focus{
-    outline:none;
-}
 
 /*
  *  Article Page specific properties
